fixed overlap

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
     flex: 1 100%;
 }
 article {
-  margin-left: 170px;
+  margin-left: 270px;
     padding: 1em;
     overflow: hidden;
 }
